[refs #84441] Fix homepage editor bar and project description overlapping problem.

--- a/src/eni/seis/theme/theme-south/css/main.css
+++ b/src/eni/seis/theme/theme-south/css/main.css
@@ -3550,7 +3550,6 @@ ul.configlets {
   padding: 2rem;
   left: 0;
   z-index: 2;
-  height: 100%;
   margin-left: 10%;
   margin-top: 100px;
 }
