--- a/src/eni/seis/theme/theme-south/src/less/layout/homepage-map.less
+++ b/src/eni/seis/theme/theme-south/src/less/layout/homepage-map.less
@@ -32,7 +32,6 @@
       padding: 2rem;
       left: 0;
       z-index: 2;
-      height: 100%;
       margin-left: 10%;
       margin-top: 100px;
       h3 {
